Add file controller tests and refine file service tests (#203)
* test(filemanager): add comprehensive tests for delete and cleanup operations

- Implement FileControllerTest for deleteSoft, deleteHard, and manual cleanup
- Cover 403 (Forbidden) and 404 (NotFound) scenarios in controller unit tests
- Enhance FileCleanupServiceImplTest with resilience and edge case coverage
- Improve FileServiceImplTest assertions for storageKey and deletedAt stability
- Refine FileController OpenAPI documentation for delete endpoints

add documentation for scheduler and config

* add debug logging for file operations